Implemented all operations for Sensors, also implemented connection to influx to obtain its data
